yaml/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/yaml-springmysql-net: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: spring.datasource.url
              value: jdbc:mysql://mysqldb:3306/hospital
          image: hospital
          name: server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
